VMware, RHV, OSP preparation

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Preparation.adoc
@@ -3,15 +3,23 @@
 
 Preparing the environment for migration involves the following key steps:
 
-* Preparing the xref:Preparing_the_vmware_source_environment[source environment]
-* Preparing the target environment: xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[Red Hat OpenStack Platform]
-* Configuring the xref:Conversion_hosts[conversion hosts]
+. xref:Preparing_the_vmware_source_environment[]
+. Configuring the target storage and networks, installing software, and adding providers to CloudForms in the target environment:
 
-include::modules/ref_Software_compatibility_matrix.adoc[leveloffset=+1]
+* xref:Preparing_the_rhv_target_environment[]
+* xref:Preparing_the_osp_target_environment[]
+
+. xref:Configuring_conversion_hosts_for_transformation[]
++
+You can xref:Configuring_the_maximum_number_of_concurrent_migrations[change the maximum number of concurrent migrations] for conversion hosts or providers for better performance and control of the migration process.
 
 include::modules/proc_Preparing_the_vmware_source_environment.adoc[leveloffset=+1]
 
 [id="Preparing_the_target_environment"]
 == Preparing the target environment
-include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
-include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
+
+include::modules/proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+2]
+include::modules/proc_Preparing_the_osp_target_environment.adoc[leveloffset=+2]
+
+include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
+include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
