--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -2,8 +2,8 @@
 = Conversion hosts
 
 include::modules/proc_Creating_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
+// include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
 include::modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
 include::modules/proc_Verifying_conversion_hosts.adoc[leveloffset=+1]
-include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
+// include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
 include::modules/proc_Upgrading_conversion_hosts.adoc[leveloffset=+1]
