--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_osp_target_environment.adoc
@@ -1,49 +1,76 @@
 [id="Preparing_the_osp_target_environment"]
 = Preparing the Red Hat OpenStack Platform environment
 
-Check the xref:Software_compatibility_matrix[software compatibility matrix] before you install the software.
+.Procedure
 
-To prepare the Red Hat OpenStack Platform environment for migration:
-
-. Ensure that the storage backends have sufficient space for the virtual machines you are migrating.
+include::ref_Software_compatibility_matrix.adoc[]
 
 . Set the BIOS settings of the physical hosts for optimal performance (rather than power-saving), according to the vendor's recommendations, and disable the C1E halt state, if applicable.
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/[Red Hat OpenStack Platform] 13 or later.
+. Install Red Hat OpenStack Platform 13 or later (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/director_installation_and_usage/[Red Hat OpenStack Platform Director Installation and Usage]).
 
-. Create link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/networking_guide/#create_a_network[provider networks] for the target instances to ensure that the IP addresses of the source virtual machines are preserved.
+. Create provider networks for the target instances to preserve the IP addresses of the source virtual machines (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/networking_guide/#create_a_network[Create a network] in the _Red Hat OpenStack Platform Networking Guide_).
 
-. link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#create_a_project[Create a project] for the conversion hosts and whatever destination projects you require for the target instances.
+. Create a project for the conversion hosts and whatever destination projects you require for the target instances (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/users_and_identity_management_guide/#create_a_project[Create a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
 
-. Ensure that the link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/users_and_identity_management_guide/#edit_a_project[`admin` user has `member` and `admin` roles] in the conversion and destination projects.
+. Ensure that the `admin` user has `member` and `admin` roles in the conversion and destination projects (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/users_and_identity_management_guide/#edit_a_project[Edit a Project] in the _Red Hat OpenStack Platform Users and Identity Management Guide_).
 
-.   link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/storage_guide/#section-volumes-advanced-vol-type[Set at least one `volume type`] for the target block storage. Otherwise, CloudForms will not detect the storage during infrastructure mapping.
+. Set at least one `volume type` for the target block storage (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-create-volume[Create a Volume] and link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/storage_guide/#section-volume-retype[Changing a Volume’s Type (Volume Re-typing)] in the _Red Hat OpenStack Platform Storage Guide_). Otherwise, CloudForms cannot detect the storage when you create the infrastructure mapping.
 
-. Ensure that the user configured in CloudForms for the OpenStack Platform provider has `admin` privileges on the target projects.
+. Ensure that the storage backends have sufficient space for the migrated virtual machines.
 
-. Configure security groups:
-* A security group for the conversion hosts and CloudForms must have port 22 (SSH) enabled.
-* A security group for CloudForms must have port 443 (HTTPS) enabled.
+. Configure security groups with the following ports enabled:
+
+* For the conversion hosts and CloudForms: port 22 (SSH)
+* For CloudForms: port 443 (HTTPS)
 +
 [NOTE]
 ====
 Outbound traffic is enabled by default. If you have changed this setting, enable ports 902 (CloudForms to VMware) and 5480 (`virt-v2v` to vCenter).
 ====
 
-. Create flavors suitable for the virtual machines that you are migrating. If you do not create custom flavors, CloudForms will try to map the source virtual machine to an existing flavor.
+. Create flavors for the source virtual machines. If you do not create custom flavors, CloudForms will map each source virtual machine to an existing flavor.
 
-. Install link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Red Hat CloudForms] 4.7 or later.
+. Install Red Hat CloudForms 4.7 (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/installing_red_hat_cloudforms_on_red_hat_openstack_platform/[Installing Red Hat CloudForms on Red Hat OpenStack Platform]).
 
-. Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[VMware] and  link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[OpenStack Platform] environments as providers in CloudForms.
+. Add VMware and OpenStack Platform as providers in CloudForms (see link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#vmware_vcenter_providers[Adding a VMware vCenter Provider] and link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#adding_an_openstack_infrastructure_provider[Adding an OpenStack Infrastructure Provider] in _Red Hat CloudForms: Managing Providers_).
 +
 [NOTE]
 ====
-Do not remove or change a provider before, during, or after migration because it will have negative effects on CloudForms.
+Do not remove or change a provider before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
 ====
 
-. Configure the xref:Conversion_hosts[conversion hosts].
+. Ensure that the OpenStack Platform user (default is `cloud-user`) in CloudForms has `admin` privileges for the target projects.
+
+. Deploy the conversion host instances using the conversion host appliance. The number of conversion hosts you deploy depends on your migration size and infrastructure capabilities. See xref:Number_of_conversion_hosts[] for details.
+
+.Deploying the OpenStack Platform conversion host instances[[Deploying_osp_conversion_hosts]]
+
+. Navigate to link:https://access.redhat.com/downloads/[].
+. In the *A-Z* tab, click *Red Hat OpenStack Platform*.
+. Click the *Download Latest* button to go to the OpenStack Platform download page.
+. Click the *Product Software* tab and download the `RHOSP V2V Image for Red Hat OpenStack Director (x86_64)`.
++
+[IMPORTANT]
+====
+Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes. The OpenStack Platform 14 conversion appliance can be used with both OpenStack Platform 13 and 14.
+====
+
+. Upload the appliance to Glance storage.
+. Deploy the appliance as a conversion host instance, with the following resources:
++
+** 4 vCPUs
+** 8 GB RAM
+** `/tmp` (1 GB for each conversion)
+** `/var/tmp` (1 GB for each conversion)
+** `/var/logs` (5 GB)
 +
 [NOTE]
 ====
-For best performance, deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. This is a technology preview.
+For optimal performance:
+
+* Deploy the conversion hosts on more than one hypervisor.
+* Deploy the conversion hosts on a compute node with nested virtualization enabled. See link:https://docs.openstack.org/devstack/latest/guides/devstack-with-nested-kvm.html[]. Nested virtualization is a technology preview.
 ====
+
+. Configure the xref:Configuring_conversion_hosts_for_transformation[conversion hosts].
