started conversion hosts

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
@@ -11,7 +11,8 @@
 include::common/attributes/ims.adoc[]
 
 :cfme:
-
+:context: RHV
+:context: OSP
 :numbered:
 
 include::doc/assembly_Infrastructure_migration_solution_overview.adoc[leveloffset=+1]
