--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -1,28 +1,22 @@
-[id="Configuring_conversion_hosts_for_transformation"]
-= Configuring the conversion hosts
+[id="Configuring_the_{context}_conversion_hosts"]
+.Procedure
 
-You can configure your conversion hosts for VDDK or SSH transformation. Configuring the conversion hosts for transformation involves the following key steps:
 
-. VDDK only: xref:VDDK_only_Downloading_and_copying_VDDK[Downloading and copying the VDDK package]
-. VDDK and SSH: xref:VDDK_and_SSH_Configuring_the_conversion_hosts[Configuring the conversion hosts]
-. VDDK and SSH: xref:VDDK_and_SSH_Validating_the_transformation_configuration[Validating the transformation configuration]
-. SSH only: xref:SSH_only_Configuring_and_validating_the_SSH_connection[Configuring and validating the SSH connection]
+ifdef::RHV[]
+This is for RHV
+endif::RHV[]
 
-[id='VDDK_only_Downloading_and_copying_VDDK']
-== VDDK only: Downloading and copying the VDDK package
 
-. Go to the link:https://www.vmware.com/support/pubs/[VMware Documentation site], click `VMware SDK & API Product Documentation` to expand, and click `VMware Virtual Disk Development Kit (VDDK)`.
 
-. Click `Latest Releases` and select the latest VDDK release.
 
-. Download the VDDK package, `VMware-vix-disklib-_version_.x86_64.tar.gz`.
+ifdef::OSP[]
+This is for OSP
+endif::OSP[]
 
-. Copy the VDDK package to a location that is accessible over `HTTP`, for example, `/var/www/html` on the Red Hat Virtualization Manager machine.
 
-You are ready to configure the conversion hosts.
 
-[id='VDDK_and_SSH_Configuring_the_conversion_hosts']
-== VDDK and SSH: Configuring the conversion hosts
+OLD
+
 
 . Go to `/usr/share/ovirt-ansible-v2v-conversion-host/playbooks` on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform).
 
@@ -32,7 +26,7 @@ You are ready to configure the conversion hosts.
 
 * Red Hat Virtualization conversion host using VDDK:
 +
-[options="nowrap" subs="verbatim"]
+[options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
 v2v_host_type: rhv
@@ -63,8 +57,8 @@ manageiq_zone_id: "42000000000001"
 # Each provider is a dictionary with 3 attributes: `name`, `hostname`, and `connection_configurations`
 manageiq_providers:
   - name: "_RHV_"
-    hostname: _FQDN_or_IP_
-    connection_configurations:
+    hostname: _FQDN_or_IP_ <1>
+    connection_configurations: <2>
       - endpoint:
           role: "default"
           verify_ssl: true
@@ -73,15 +67,12 @@ manageiq_providers:
             MIIDoDCCAoigAwIBAgIBATANBgkqhkiG9w0BAQsFADA9MRswGQYDVQ....
             -----END CERTIFICATE-----
 ----
-+
-[NOTE]
-====
-RHV `connection_configurations` has a single endpoint, whose role is `default`. You can choose to verify the SSL certificate (`verify_ssl: true`) and provide the CA chain (`certificate_authority`), found in `/etc/pki/ovirt-engine/apache-ca.pem` on the Manager machine.
-====
+<1> `hostname` is the _FQDN_or_IP_ of the RHV Manager.
+<2> RHV `connection_configurations` has a single endpoint, whose role is `default`. You can choose to verify the SSL certificate (`verify_ssl: true`) and provide the CA chain (`certificate_authority`), found in `/etc/pki/ovirt-engine/apache-ca.pem` on the Manager machine.
 
 * OpenStack Platform conversion host using SSH:
 +
-[options="nowrap" subs="verbatim"]
+[options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
 v2v_host_type: openstack
@@ -94,8 +85,8 @@ manageiq_validate_certs: false
 manageiq_zone_id: "42000000000001"
 manageiq_providers:
   - name: "_OpenStack_"
-    hostname: _FQDN_or_IP_
-    connection_configurations:
+    hostname: _FQDN_or_IP_ <1>
+    connection_configurations: <2>
       - endpoint:
           role: "default"
 # Valid values: `non-ssl`, `ssl-without-validation`, `ssl`. `ssl` requires `certificate_authority`.
@@ -109,13 +100,15 @@ manageiq_providers:
             -----END TRUSTED CERTIFICATE-----
 ----
 +
-[NOTE]
 ====
-OpenStack Platform `connection_configurations` has a single endpoint, whose role is `default`. You can specify the connection security: `non-ssl`, `ssl-without-validation`, or `ssl`. For `ssl`, you must provide a CA chain (certificate_authority), which is a concatenation of the following CA files:
+<1> `hostname` is the _FQDN_or_IP_ of the OpenStack Platform controller.
+<2> OpenStack Platform `connection_configurations` has a single endpoint, whose role is `default`. You can specify the connection security: `non-ssl`, `ssl-without-validation`, or `ssl`.
++
+For `ssl`, you must provide a CA chain (certificate_authority), which is a concatenation of the following CA files:
 
 * `/etc/pki/ca-trust/source/anchors/undercloud-cacert.pem` on the undercloud server
 * `/etc/pki/ca-trust/anchors/overcloud-cacert.pem` on one of the overcloud controllers
-
++
 If you deploy your own link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/#appe-SSLTLS_Certificate_Configuration[certificate authority], use the chain that signs the OpenStack Platform API certificates.
 ====
 
@@ -128,7 +121,7 @@ If you deploy your own link:https://access.redhat.com/documentation/en-us/red_ha
 
 . Add the following lines to `secure_vars.yml`:
 +
-[options="nowrap" subs="verbatim"]
+[options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
 # Use this file for sensitive information
@@ -139,7 +132,7 @@ manageiq_username: "_username_"
 manageiq_password: "_password_"
 
 # SSH private key to connect to VMware hypervisors.
-# You will later copy this key to the VMware hypervisors if you use SSH transformation.
+# This key is required for both SSH and VDDK transformation
 v2v_ssh_private_key: |
   -----BEGIN RSA PRIVATE KEY-----
   b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAAAAdzc2gtcn....
@@ -150,10 +143,11 @@ v2v_ssh_private_key: |
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# ansible-playbook -i `hostname`, -c local -b \
+# ansible-playbook -i _hostname_, -c local -b \ <1>
     -e @extra_vars.yml -e @secure_vars.yml --ask-vault-pass \
     /usr/share/ovirt-ansible-v2v-conversion-host/playbooks/conversion_host_enable.yml
 ----
+<1> `hostname` is the _FQDN_ or IP address of the CloudForms provider endpoint. For Red Hat Virtualization, the CloudForms provider endpoint is the RHV Manager. For OpenStack Platform, it is the controller.
 +
 [IMPORTANT]
 ====
@@ -165,8 +159,8 @@ Running the `conversion_host_enable` playbook more than once on the same host cr
 ----
 ====
 
-[id="VDDK_and_SSH_Validating_the_transformation_configuration"]
-== VDDK and SSH: Validating the transformation configuration
+// [id="VDDK_and_SSH_Validating_the_transformation_configuration"]
+// == VDDK and SSH: Validating the transformation configuration
 
 Run the `conversion_host_check` playbook to verify that the conversion hosts are configured correctly:
 
@@ -183,16 +177,16 @@ Run the `conversion_host_check` playbook to verify that the conversion hosts are
 
 *SSH only:* If you are configuring conversion hosts for SSH transformation, you must configure and validate the SSH connection.
 
-[id="SSH_only_Configuring_and_validating_the_SSH_connection"]
+
 == SSH only: Configuring and validating the SSH connection
 
 . Enable SSH on all VMware hypervisors.
 +
 For instructions, go to the link:https://docs.vmware.com/en/VMware-vSphere/index.html[VMware vSphere Documentation site]. In the navigation pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].
 
-. Copy the public key you created in xref:VDDK_and_SSH_Configuring_the_conversion_hosts[] to each VMware hypervisor to ensure that the Manager or the OpenStack Platform conversion host has the SSH key of the VMware hypervisor in its `known_hosts` file:
+. Copy the public key you created in xref:Configuring_conversion_hosts_for_transformation[] to each VMware hypervisor to ensure that the Manager or the OpenStack Platform conversion host has the SSH key of the VMware hypervisor in its `known_hosts` file:
 +
-[options="nowrap" subs="verbatim"]
+[options="nowrap" subs="+quotes,verbatim"]
 ----
 # ssh root@_esx1.example.com_ sh -c \
     'cat >> /etc/ssh/keys-root/authorized_keys' < /var/lib/vdsm/.ssh/id_rsa.pub
