--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -20,7 +20,7 @@ You can configure your conversion hosts for VDDK or SSH transformation.
 
 == Configuring Red Hat Virtualization conversion hosts
 
-:context: RHV
+// :context: RHV
 include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
 
 // :context!: RHV
