--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_conversion_hosts.adoc
@@ -20,7 +20,7 @@ You can select, authenticate, and configure your conversion hosts in CloudForms.
 . Click *Latest Releases* and select the latest VDDK release.
 . Download the VDDK package (+VMware-vix-disklib-_version_.x86_64.tar.gz+) and record its path for the conversion host configuration procedure.
 
-
+FROM MOCKUPS, NOT REAL UI
 .Procedure
 
 . In CloudForms, click menu:Compute[Migration > Migration Settings].
