Configuring conv hosts for ssh vddk

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Conversion_hosts.adoc
@@ -1,39 +1,31 @@
 [id="Configuring_conversion_hosts_for_transformation"]
 = Configuring the conversion hosts
 
-You can configure your conversion hosts for VDDK or SSH transformation.
+You can configure your conversion hosts for VDDK or SSH transformation:
 
-.Prerequisites
+* xref:Configuring_rhv_hosts[]
+* xref:Configuring_osp_hosts[]
 
-* These procedures assume that you have answered the following questions:
+[NOTE]
+====
+These procedures assume that you have answered the following questions:
 
-** xref:Number_of_conversion_hosts[]
-** xref:datapath_transformation_options_vddk_ssh[]. For VDDK, the following prerequisite applies.
+* xref:Number_of_conversion_hosts[]
+* xref:datapath_transformation_options_vddk_ssh[]
+====
 
-* VDDK requires the latest Virtual Disk Development Kit release:
+[[Configuring_rhv_hosts]]
+== Configuring the Red Hat Virtualization conversion hosts
 
-. Navigate to link:https://www.vmware.com/support/pubs/[].
-. Click *VMware SDK & API Product Documentation* to expand.
-. Click *VMware Virtual Disk Development Kit (VDDK)*.
-. Click *Latest Releases* and select the latest VDDK release.
-. Download the VDDK package (+VMware-vix-disklib-_version_.x86_64.tar.gz+) and record its path for the conversion host configuration procedure.
-
-== Configuring Red Hat Virtualization conversion hosts
-
-// :context: RHV
+:context: rhv
+:rhv:
 include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
+:rhv!:
 
-// :context!: RHV
+[[Configuring_osp_hosts]]
+== Configuring the OpenStack Platform conversion hosts
 
-include::modules/proc_Enabling_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
-
-== Configuring OpenStack Platform conversion hosts
-
-:context: OSP
+:context: osp
+:osp:
 include::modules/proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
-
-// :context!: OSP
-
-// include::modules/proc_Verifying_conversion_hosts.adoc[leveloffset=+1]
-// // include::modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc[leveloffset=+1]
-// include::modules/proc_Upgrading_conversion_hosts.adoc[leveloffset=+1]
+:osp!:
