--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_maximum_number_of_concurrent_migrations.adoc
@@ -1,5 +1,7 @@
 [id="Configuring_the_maximum_number_of_concurrent_migrations"]
-= Changing the maximum number of concurrent migrations
+= (Optional) Changing the maximum number of concurrent migrations
+
+You can change the maximum number of concurrent migrations for conversion hosts or providers to control the impact of the migration process on your infrastructure. 
 
 The default maximum number of concurrent migrations is `10` for conversion hosts and `10` for a provider. You can change these limits to control the impact of the migration process on your infrastructure.
 
