--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_rhv_target_environment.adoc
@@ -41,4 +41,4 @@ IMS only supports shared storage, such as NFS, iSCSI, or FCP. Local storage is n
 Do not remove or change a provider (including refreshing RHV hosts) before, during, or after migration because these actions cause errors in the infrastructure mappings and migration plans.
 ====
 
-You are ready to xref:Configuring_conversion_hosts_for_transformation[configure the conversion hosts].
+You are ready to xref:Configuring_rhv_hosts[configure the conversion hosts].
