--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -1,41 +1,55 @@
 [id="Configuring_the_{context}_conversion_hosts"]
+Configuring a conversion host involves the following key steps:
+
+. VDDK only: Downloading the VMware Virtual Disk Development Kit
+. Creating the `extra_vars.yml` and `secure_vars.yml` files
+. Running the `conversion_host_enable` playbook to configure the host
+. Running the `conversion_host_check` playbook to verify the configuration
+ifdef::rhv[]
+. Authenticating the conversion host in CloudForms
+endif::rhv[]
+. SSH only: Configuring the SSH connection to the VMware hypervisors
+
+.Prerequisite
+
+* If you are using VDDK, download the latest VMware Virtual Disk Development Kit release.
++
+====
+.Downloading the VMware Virtual Disk Development Kit
+. Navigate to link:https://www.vmware.com/support/pubs/[].
+. Click *VMware SDK & API Product Documentation* to expand.
+. Click *VMware Virtual Disk Development Kit (VDDK)*.
+. Click *Latest Releases* and select the latest VDDK release.
+. Download and save the VDDK package (+VMware-vix-disklib-_version_.x86_64.tar.gz+), recording its path for the conversion host configuration procedure.
+====
+
 .Procedure
 
+ifdef::rhv[]
+. Connect to the Manager machine using SSH.
+. Go to `/usr/share/ovirt-ansible-v2v-conversion-host/playbooks`.
+endif::rhv[]
 
-ifdef::RHV[]
-This is for RHV
-endif::RHV[]
+ifdef::osp[]
+. Connect to a conversion host using SSH.
+. Go to `/usr/share/ovirt-ansible-v2v-conversion-host/playbooks`.
+endif::osp[]
 
+. Generate an SSH key pair. These keys are used to connect to the VMware hypervisors and are required for both VDDK and SSH.
 
-
-
-ifdef::OSP[]
-This is for OSP
-endif::OSP[]
-
-
-
-OLD
-
-
-. Go to `/usr/share/ovirt-ansible-v2v-conversion-host/playbooks` on the Manager machine (for Red Hat Virtualization) or on each conversion host (for OpenStack Platform).
-
-. Generate an SSH key pair to connect to the VMware hypervisors over SSH. You must create the keys regardless of the chosen transformation method.
-
-. Create `extra_vars.yml` according to the following examples:
-
-* Red Hat Virtualization conversion host using VDDK:
+. Create the `extra_vars.yml` file according to the following example:
+ifdef::rhv[]
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
 v2v_host_type: rhv
 
-# Transport methods to configure on the conversion host. Valid values: 'vddk', 'ssh' (on separate lines)
+# Transport methods to configure on the conversion host. Valid values: 'vddk', 'ssh'
 v2v_transport_methods:
-  - vddk
+  - _vddk_
 
-# Maximum number of concurrent conversions per host. Default is '10'.
+# Maximum number of concurrent conversions per host. Default is `10`.
 v2v_max_concurrent_conversions: _10_
 
 # File name of VDDK package
@@ -49,7 +63,7 @@ manageiq_provider_name: RHV
 # Base URL of CloudForms machine
 manageiq_url: "https://_CloudForms_FQDN_"
 
-# Whether to validate certificate of CloudForms server. Default is 'true'
+# Whether to validate certificate of CloudForms server. Default is `true`.
 manageiq_validate_certs: _false_
 manageiq_zone_id: "42000000000001"
 
@@ -57,101 +71,127 @@ manageiq_zone_id: "42000000000001"
 # Each provider is a dictionary with 3 attributes: `name`, `hostname`, and `connection_configurations`
 manageiq_providers:
   - name: "_RHV_"
-    hostname: _FQDN_or_IP_ <1>
-    connection_configurations: <2>
+    hostname: _Manager_FQDN_or_IP_
+    connection_configurations: <1>
       - endpoint:
           role: "default"
-          verify_ssl: true
+          verify_ssl: true <2>
           certificate_authority: |
             -----BEGIN CERTIFICATE-----
-            MIIDoDCCAoigAwIBAgIBATANBgkqhkiG9w0BAQsFADA9MRswGQYDVQ....
+            _MIIDoDCCAoigAwIBAgIBATANBgkqhkiG9w0BAQsFADA9MRswGQYDVQ...._
             -----END CERTIFICATE-----
 ----
-<1> `hostname` is the _FQDN_or_IP_ of the RHV Manager.
-<2> RHV `connection_configurations` has a single endpoint, whose role is `default`. You can choose to verify the SSL certificate (`verify_ssl: true`) and provide the CA chain (`certificate_authority`), found in `/etc/pki/ovirt-engine/apache-ca.pem` on the Manager machine.
-
-* OpenStack Platform conversion host using SSH:
+<1> `connection_configurations` has a single endpoint, whose role is `default`.
+<2> You can choose whether to verify the SSL certificate. If `true`, add the CA chain (`certificate_authority`), which is in `/etc/pki/ovirt-engine/apache-ca.pem` on the Manager machine.
+endif::rhv[]
+ifdef::osp[]
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
 v2v_host_type: openstack
+
+# Transport methods to configure on the conversion host. Valid values: 'vddk', 'ssh'
 v2v_transport_methods:
-  - ssh
+  - _vddk_
+
+# Maximum number of concurrent conversions per host. Default is `10`.
 v2v_max_concurrent_conversions: _10_
+
+# File name of VDDK package
+v2v_vddk_package_name: "VMware-vix-disklib-_version_.x86_64.tar.gz"
+
+# URL of VDDK package
+v2v_vddk_package_url: "http://_path/to/downloaded_vddk_package_/{{ v2v_vddk_package_name }}"
+
 manageiq_provider_name: OpenStack
+
+# Base URL of CloudForms machine
 manageiq_url: "https://_CloudForms_FQDN_"
-manageiq_validate_certs: false
+
+# Whether to validate certificate of CloudForms server. Default is `true`.
+manageiq_validate_certs: _false_
 manageiq_zone_id: "42000000000001"
+
+# List of cloud or infrastructure providers
+# Each provider is a dictionary with 3 attributes: `name`, `hostname`, and `connection_configurations`
 manageiq_providers:
   - name: "_OpenStack_"
-    hostname: _FQDN_or_IP_ <1>
-    connection_configurations: <2>
+    hostname: _controller_node_FQDN_or_IP_address_
+    connection_configurations: <1>
       - endpoint:
           role: "default"
-# Valid values: `non-ssl`, `ssl-without-validation`, `ssl`. `ssl` requires `certificate_authority`.
-          security_protocol: "ssl"
+          security_protocol: "ssl" <2>
           certificate_authority: |
             -----BEGIN TRUSTED CERTIFICATE-----
-            MIIDNzCCAh8CAQEwDQYJKoZIhvcNAQELBQAwYjELMAkGA1UEBhMCVV....
+            _MIIDNzCCAh8CAQEwDQYJKoZIhvcNAQELBQAwYjELMAkGA1UEBhMCVV...._
             -----END TRUSTED CERTIFICATE-----
             -----BEGIN TRUSTED CERTIFICATE-----
-            MIIDlzCCAn+gAwIBAgIJAOP7AaT7dsLYMA0GCSqGSIb3DQEBCwUAMG....
+            _MIIDlzCCAn+gAwIBAgIJAOP7AaT7dsLYMA0GCSqGSIb3DQEBCwUAMG...._
             -----END TRUSTED CERTIFICATE-----
 ----
+<1> `connection_configurations` has a single endpoint, whose role is `default`.
+<2> You can choose the connection security: `non-ssl`, `ssl-without-validation`, or `ssl`.
 +
-====
-<1> `hostname` is the _FQDN_or_IP_ of the OpenStack Platform controller.
-<2> OpenStack Platform `connection_configurations` has a single endpoint, whose role is `default`. You can specify the connection security: `non-ssl`, `ssl-without-validation`, or `ssl`.
-+
-For `ssl`, you must provide a CA chain (certificate_authority), which is a concatenation of the following CA files:
+If you select `ssl`, add the CA chain (`certificate_authority`), which is a concatenation of the following CA files:
 
 * `/etc/pki/ca-trust/source/anchors/undercloud-cacert.pem` on the undercloud server
 * `/etc/pki/ca-trust/anchors/overcloud-cacert.pem` on one of the overcloud controllers
 +
-If you deploy your own link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/html-single/director_installation_and_usage/#appe-SSLTLS_Certificate_Configuration[certificate authority], use the chain that signs the OpenStack Platform API certificates.
-====
+If you deploy your own certificate authority, use the chain that signs the OpenStack Platform API certificates (see link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/14/html-single/director_installation_and_usage/index#appe-SSLTLS_Certificate_Configuration[SSL/TLS Certificate Configuration] in _Red Hat OpenStack Platform Director Installation and Usage_).
+endif::osp[]
 
-. Create an encrypted `secure_vars.yml` file for your passwords and keys:
+. Create an encrypted `secure_vars.yml` file:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # ansible-vault create secure_vars.yml
 ----
 
-. Add the following lines to `secure_vars.yml`:
+. Add the following variables to `secure_vars.yml` and save the file:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 ---
-# Use this file for sensitive information
 # CloudForms `admin` user, for connecting to CloudForms
 manageiq_username: "_username_"
 
 # CloudForms `admin` password:
 manageiq_password: "_password_"
 
-# SSH private key to connect to VMware hypervisors.
-# This key is required for both SSH and VDDK transformation
+# SSH private key to connect to VMware hypervisors. Required for both VDDK and SSH.
 v2v_ssh_private_key: |
   -----BEGIN RSA PRIVATE KEY-----
-  b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAAAAdzc2gtcn....
+  _b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAlwAAAAdzc2gtcn...._
   -----END RSA PRIVATE KEY-----
 ----
 
-. Run the `conversion_host_enable` playbook to configure the conversion hosts for transformation:
+. Run the `conversion_host_enable` playbook:
 +
+ifdef::rhv[]
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# ansible-playbook -i _hostname_, -c local -b \ <1>
+# ansible-playbook -i _hostname_, -c local -b \
     -e @extra_vars.yml -e @secure_vars.yml --ask-vault-pass \
     /usr/share/ovirt-ansible-v2v-conversion-host/playbooks/conversion_host_enable.yml
 ----
-<1> `hostname` is the _FQDN_ or IP address of the CloudForms provider endpoint. For Red Hat Virtualization, the CloudForms provider endpoint is the RHV Manager. For OpenStack Platform, it is the controller.
++
+`hostname` is the FQDN or IP address of the Manager.
+endif::rhv[]
+ifdef::osp[]
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ansible-playbook -i _hostname_, -c local -b \
+    -e @extra_vars.yml -e @secure_vars.yml --ask-vault-pass \
+    /usr/share/ovirt-ansible-v2v-conversion-host/playbooks/conversion_host_enable.yml
+----
++
+`hostname` is the FQDN or IP address of the controller node.
+endif::osp[]
 +
 [IMPORTANT]
 ====
-Running the `conversion_host_enable` playbook more than once on the same host creates multiple entries in the CloudForms database for the same host. If you need to run the `conversion_host_enable` playbook again, first remove the existing database entry by running the `conversion_host_disable` playbook on the same host:
+Running the `conversion_host_enable` playbook more than once on the same host creates multiple entries in the CloudForms database for the same host. If you need to run the `conversion_host_enable` playbook again, first remove the existing database entry by running the `conversion_host_disable` playbook on the host:
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -159,41 +199,36 @@ Running the `conversion_host_enable` playbook more than once on the same host cr
 ----
 ====
 
-// [id="VDDK_and_SSH_Validating_the_transformation_configuration"]
-// == VDDK and SSH: Validating the transformation configuration
-
-Run the `conversion_host_check` playbook to verify that the conversion hosts are configured correctly:
-
+. Run the `conversion_host_check` playbook to verify the configuration:
++
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# ansible-playbook --ask-vault-pass -i conversion_hosts_inventory.yml conversion_host_check.yml
+# ansible-playbook --ask-vault-pass -i _hostname_, conversion_host_check.yml
 ----
+ifdef::rhv[]
 
-*VDDK only:*
+If you are using VDDK, you are ready to xref:Enabling_conversion_hosts_in_cloudforms[authenticate the conversion hosts in CloudForms].
+endif::rhv[]
+ifdef::osp[]
+If you are using VDDK, you are ready to xref:Migrating_the_infrastructure[migrate the infrastructure].
+endif::osp[]
 
-* If you are configuring Red Hat Virtualization conversion hosts for VDDK transformation, you must  xref:Enabling_conversion_hosts_in_cloudforms[enable them] in CloudForms.
+If you are using SSH, you are ready to configure the SSH connection to the VMware hypervisors.
 
-* If you are configuring OpenStack Platform conversion hosts for VDDK transformation, you can create an xref:Creating_an_Infrastructure_Mapping[infrastructure mapping].
+.Configuring the SSH connection to the VMware hypervisors
 
-*SSH only:* If you are configuring conversion hosts for SSH transformation, you must configure and validate the SSH connection.
+. Enable SSH on all VMware hypervisors. For instructions, navigate to link:https://docs.vmware.com/en/VMware-vSphere/index.html[]. In the navigation pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].
 
-
-== SSH only: Configuring and validating the SSH connection
-
-. Enable SSH on all VMware hypervisors.
-+
-For instructions, go to the link:https://docs.vmware.com/en/VMware-vSphere/index.html[VMware vSphere Documentation site]. In the navigation pane, click menu:vSphere _version_[ESXi and vCenter Server > VMware ESXi Installation and Setup > Installing and Setting Up ESXi > Setting Up ESXi > Enable ESXi Shell and SSH Access with the Direct Console User Interface].
-
-. Copy the public key you created in xref:Configuring_conversion_hosts_for_transformation[] to each VMware hypervisor to ensure that the Manager or the OpenStack Platform conversion host has the SSH key of the VMware hypervisor in its `known_hosts` file:
+. Copy the public SSH key corresponding to the private SSH key in the `secure_vars.yml` file to each VMware hypervisor:
+ifdef::rhv[]
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
 # ssh root@_esx1.example.com_ sh -c \
     'cat >> /etc/ssh/keys-root/authorized_keys' < /var/lib/vdsm/.ssh/id_rsa.pub
-#   'cat >> /etc/ssh/keys-root/authorized_keys' < /OpenStack_Platform/conversion_host_key/id_rsa.pub
 ----
 
-. For Red Hat Virtualization, connect to the VMware hypervisor using `ssh-agent` to validate the SSH connection:
+. Connect to each VMware hypervisor using `ssh-agent` to validate the SSH connection:
 +
 [options="nowrap" subs="+quotes,verbatim"]
 ----
@@ -207,13 +242,42 @@ echo Agent pid 12345;
     SSH_AUTH_SOCK=/tmp/ssh-123456ABCDE/agent.12345 ssh root@_esx1.example.com_
 ----
 +
-For OpenStack Platform, connect to the VM hypervisor as `cloud-user` to validate the SSH connection.
+If the connection is successful, the conversion host is correctly configured for SSH.
 
-If the connection is successful, the conversion host is correctly configured for SSH transformation.
+You are ready to authenticate the conversion host in CloudForms.
+endif::rhv[]
+ifdef::osp[]
++
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ssh root@_esx1.example.com_ sh -c \
+    'cat >> /etc/ssh/keys-root/authorized_keys' < /OpenStack_Platform/conversion_host_key/id_rsa.pub
+----
 
+. Connect to the VM hypervisor as `cloud-user` to validate the SSH connection. If the connection is successful, the conversion host is correctly configured for SSH transformation.
+
+You are ready to xref:Migrating_the_infrastructure[migrate the infrastructure].
+endif::osp[]
+ifdef::rhv[]
+.Authenticating the conversion host in CloudForms[[Enabling_conversion_hosts_in_cloudforms]]
+
+. Click menu:Compute[Infrastructure > Hosts] and select a Red Hat Virtualization conversion host.
+. Click the *Configuration* drop-down button, and select *Edit Selected items*.
+. In the *Default* tab of the Endpoints section, enter the *Username* `root` and the root password.
+. Click *Validate* and wait for validation to complete.
+. Click *Save*.
+
+[[Reinstalling_ipa_client]]
 [IMPORTANT]
 ====
-*Red Hat Virtualization only:* If you are using SSSD with single sign-on, you must reinstall `ipa-client` without configuring the OpenSSH client. See xref:SSH_transformation_fails[SSH transformation failure] for details.
-====
+If you are using SSSD with single sign-on, SSH will fail for the vdsm user unless you reinstall `ipa-client` without configuring the OpenSSH client:
 
-You are ready to xref:Enabling_conversion_hosts_in_cloudforms[enable the conversion hosts] in CloudForms.
+[options="nowrap" subs="+quotes,verbatim"]
+----
+# ipa-client-install --uninstall
+# ipa-client-install --no-ssh
+----
+
+This issue cannot be resolved by modifying the configuration file because the file is restored during upgrades.
+====
+endif::rhv[]
