--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/master.adoc
@@ -3,21 +3,16 @@
 :vernum: 1.1
 :toc: left
 :toclevels: 3
-:numbered!:
 :compat-mode:
 :experimental:
+:numbered:
+:IMS:
 
 // Attributes
 include::common/attributes/ims.adoc[]
 
-:cfme:
-:context: RHV
-
-:numbered:
-
-include::doc/assembly_Infrastructure_migration_solution_overview.adoc[leveloffset=+1]
+include::doc/assembly_IMS_overview.adoc[leveloffset=+1]
 include::doc/assembly_Planning.adoc[leveloffset=+1]
 include::doc/assembly_Preparation.adoc[leveloffset=+1]
-include::doc/assembly_Conversion_hosts.adoc[leveloffset=+2]
 include::doc/assembly_Migration.adoc[leveloffset=+1]
 include::doc/assembly_Troubleshooting.adoc[leveloffset=+1]
